--- a/app/client/main.html
+++ b/app/client/main.html
@@ -1,25 +1,10 @@
 <head>
-  <title>simple-todos</title>
+  <title>simple</title>
 </head>
 
-<body>
-  <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
-  {{> info}}
-</body>
-
-<template name="hello">
-  <button>Hello World</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
+<!--
+Everything inside <template> tags is compiled into Meteor templates,
+which can be included inside HTML with {{> templateName}} or referenced in your
+JavaScript with Template.templateName.
+-->
