--- a/app/imports/ui/body.html
+++ b/app/imports/ui/body.html
@@ -1,25 +1,23 @@
 <body>
-  <div class="container">
-    <header>
-      <h1>Todo List</h1>
-    </header>
+<div class="container">
+  <header>
+    <h1>Todo List</h1>
 
-    <ul>
-      <!--
-       All of the code in your HTML files is compiled with Meteor's Spacebars compiler.
-       Spacebars uses statements surrounded by double curly braces such as {{#each}} and
-       {{#if}} to let you add logic and data to your views.
-      -->
-      {{#each tasks}}  <!-- iter. over iterable returned by 'tasks'-->
-        {{> task}}
-      {{/each}}
-    </ul>
-  </div>
+    <form class="new-task">
+      <input type="text" name="text" placeholder="Type to add new tasks"/>
+    </form>
+  </header>
+
+  <ul>
+    <!--
+     All of the code in your HTML files is compiled with Meteor's Spacebars compiler.
+     Spacebars uses statements surrounded by double curly braces such as {{#each}} and
+     {{#if}} to let you add logic and data to your views.
+    -->
+    {{#each tasks}}  <!-- iter. over iterable returned by 'Template.body.helpers.tasks()'-->
+    {{> task}}  <!-- here we are referring to a specific, single collection document (bound to 'this') -->
+    {{/each}}
+  </ul>
+</div>
 </body>
-
-
-
-<template name="task">
-  <li>{{text}}</li>
-</template>
 
