--- a/app/imports/ui/task.html
+++ b/app/imports/ui/task.html
@@ -1,10 +1,25 @@
 <template name="task">
-  <li class="{{#if checked}}checked{{/if}}">
+  <li class="{{#if checked}} checked {{/if}} {{#if private}} private {{/if}}">
     <!-- if the item is checked (see /imports/ui/task.html), strike a line thru it -->
 
     <button class="delete">&times;</button>
 
     <input type="checkbox" checked="{{checked}}" class="toggle-checked"/>
+
+    <!--
+      Each 'task' template instace property to tasks called "private" and a button for users
+      to mark a task as private. This button should only show up for the owner of a task.
+      It will display the current state of the item.
+    -->
+    {{#if isOwner}}
+    <button class="toggle-private">
+      {{#if private}}
+        Private
+      {{else}}
+        Public
+      {{/if}}
+    </button>
+    {{/if}}
 
     <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
