--- a/app/imports/ui/task.html
+++ b/app/imports/ui/task.html
@@ -21,7 +21,7 @@
     </button>
     {{/if}}
 
-    <span class="text"><strong>{{username}}</strong> - {{text}}</span>
+    <span class="text"><strong>{{username}}</strong> - {{text}} <em>{{priority}}</em></span>
   </li>
 </template>
 
